Add Vendors section to UI with beautiful card layout and category grouping

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
                 <li data-tab="outreach">📞 Past Patient Outreach</li>
                 <li data-tab="docs">👨‍⚕️ Consulting Docs</li>
                 <li data-tab="calllog">📋 Call Log</li>
+                <li data-tab="vendors">🏢 Vendors & Service Partners</li>
                 <li data-tab="alyssa-notes" class="user-section">📝 Alyssa's Tasks</li>
                 <li data-tab="moore-notes" class="user-section">👨‍⚕️ Dr. Moore's Tasks</li>
                 <li data-tab="notes">📋 All Notes</li>
