Add task tabs for Christa and Amber to user section

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,8 @@
                 <li data-tab="vendors">🏢 Vendors & Service Partners</li>
                 <li data-tab="alyssa-notes" class="user-section">📝 Alyssa's Tasks</li>
                 <li data-tab="moore-notes" class="user-section">👨‍⚕️ Dr. Moore's Tasks</li>
+                <li data-tab="christa-notes" class="user-section">👩‍⚕️ Christa's Tasks</li>
+                <li data-tab="amber-notes" class="user-section">👩‍💼 Amber's Tasks</li>
                 <li data-tab="notes">📋 All Notes</li>
                 <li data-tab="calendar">📅 Calendar</li>
                 <li data-tab="todos">📝 Todos</li>
