Add Team Chat functionality with XLSX storage and @mentions support

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
                 <li data-tab="docs">👨‍⚕️ Consulting Docs</li>
                 <li data-tab="calllog">📋 Call Log</li>
                 <li data-tab="vendors">🏢 Vendors & Service Partners</li>
+                <li data-tab="chat">💬 Team Chat</li>
                 <li data-tab="alyssa-notes" class="user-section">📝 Alyssa's Tasks</li>
                 <li data-tab="moore-notes" class="user-section">👨‍⚕️ Dr. Moore's Tasks</li>
                 <li data-tab="christa-notes" class="user-section">👩‍⚕️ Christa's Tasks</li>
