docs(rules): tighten non-interactive defaults; cleanup test artifacts

--- a/public/index.html
+++ b/public/index.html
@@ -124,11 +124,11 @@
                     <div class="pinned-patient-value" id="pinned-email">-</div>
                 </div>
                 <div class="pinned-patient-detail">
-                    <div class="pinned-patient-label">Address</div>
+                    <div class="pinned-patient-label">Area</div>
                     <div class="pinned-patient-value" id="pinned-address">-</div>
                 </div>
                 <div class="pinned-patient-detail">
-                    <div class="pinned-patient-label">Diagnosis</div>
+                    <div class="pinned-patient-label">CP Doctor</div>
                     <div class="pinned-patient-value" id="pinned-diagnosis">-</div>
                 </div>
                 <div class="pinned-patient-detail">
@@ -136,15 +136,15 @@
                     <div class="pinned-patient-value" id="pinned-hospice">-</div>
                 </div>
                 <div class="pinned-patient-detail">
-                    <div class="pinned-patient-label">Social Worker</div>
+                    <div class="pinned-patient-label">CP Status</div>
                     <div class="pinned-patient-value" id="pinned-social-worker">-</div>
                 </div>
                 <div class="pinned-patient-detail">
-                    <div class="pinned-patient-label">Doula</div>
+                    <div class="pinned-patient-label">RXNT Info</div>
                     <div class="pinned-patient-value" id="pinned-doula">-</div>
                 </div>
                 <div class="pinned-patient-detail">
-                    <div class="pinned-patient-label">Caretaker</div>
+                    <div class="pinned-patient-label">Check List</div>
                     <div class="pinned-patient-value" id="pinned-caretaker">-</div>
                 </div>
             </div>
