Feature/chat recipients checkbox (#1)
* Add Vendors tab with 6 sample service partner companies for hospice management

* Add Vendors section to UI with beautiful card layout and category grouping

* Add task tabs for Christa and Amber to user section

* Add Team Chat functionality with XLSX storage and @mentions support

* Implement advanced chat system with DM/Group messages, user coding, and participant filtering

* Fix chat loading error and implement Alyssa's perspective view with user switching

* chore(test): add agent smoke test

* docs(rules): tighten non-interactive defaults; cleanup test artifacts

* feat(chat): recipients checkbox selector, user color-coding, and XLSX-aligned message write; non-breaking UI CSS

* chore(test): auth push check

--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,12 @@
                 <li data-tab="outreach">📞 Past Patient Outreach</li>
                 <li data-tab="docs">👨‍⚕️ Consulting Docs</li>
                 <li data-tab="calllog">📋 Call Log</li>
+                <li data-tab="vendors">🏢 Vendors & Service Partners</li>
+                <li data-tab="chat">💬 Team Chat</li>
                 <li data-tab="alyssa-notes" class="user-section">📝 Alyssa's Tasks</li>
                 <li data-tab="moore-notes" class="user-section">👨‍⚕️ Dr. Moore's Tasks</li>
+                <li data-tab="christa-notes" class="user-section">👩‍⚕️ Christa's Tasks</li>
+                <li data-tab="amber-notes" class="user-section">👩‍💼 Amber's Tasks</li>
                 <li data-tab="notes">📋 All Notes</li>
                 <li data-tab="calendar">📅 Calendar</li>
                 <li data-tab="todos">📝 Todos</li>
@@ -120,11 +124,11 @@
                     <div class="pinned-patient-value" id="pinned-email">-</div>
                 </div>
                 <div class="pinned-patient-detail">
-                    <div class="pinned-patient-label">Address</div>
+                    <div class="pinned-patient-label">Area</div>
                     <div class="pinned-patient-value" id="pinned-address">-</div>
                 </div>
                 <div class="pinned-patient-detail">
-                    <div class="pinned-patient-label">Diagnosis</div>
+                    <div class="pinned-patient-label">CP Doctor</div>
                     <div class="pinned-patient-value" id="pinned-diagnosis">-</div>
                 </div>
                 <div class="pinned-patient-detail">
@@ -132,15 +136,15 @@
                     <div class="pinned-patient-value" id="pinned-hospice">-</div>
                 </div>
                 <div class="pinned-patient-detail">
-                    <div class="pinned-patient-label">Social Worker</div>
+                    <div class="pinned-patient-label">CP Status</div>
                     <div class="pinned-patient-value" id="pinned-social-worker">-</div>
                 </div>
                 <div class="pinned-patient-detail">
-                    <div class="pinned-patient-label">Doula</div>
+                    <div class="pinned-patient-label">RXNT Info</div>
                     <div class="pinned-patient-value" id="pinned-doula">-</div>
                 </div>
                 <div class="pinned-patient-detail">
-                    <div class="pinned-patient-label">Caretaker</div>
+                    <div class="pinned-patient-label">Check List</div>
                     <div class="pinned-patient-value" id="pinned-caretaker">-</div>
                 </div>
             </div>
